ghc-4335c07/testsuite/tests/indexed-types/should_fail/OverDirectThisModA.hs
{-# LANGUAGE TypeFamilies #-}

module OverDirectThisModA (C, D)
where

data family C a b :: *

type family D a b :: *
